--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,14 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  overflow: hidden;
+  touch-action: manipulation;
 }
 
 h1 {
@@ -40,10 +42,67 @@ button {
   color: #ffffff;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 600;
   font-family: inherit;
   cursor: pointer;
   transition: border-color 0.25s;
+  border: none;
+  touch-action: manipulation;
+  width: 646px;
+  height: 112px;
+  border-radius: 62px;
+}
+
+#app-container {
+  width: 100vw; /* fill viewport width */
+  height: 100vh; /* fill viewport height */
+  max-width: 1080px; /* max target width */
+  max-height: 1920px; /* max target height */
+  aspect-ratio: 9/16; /* force portrait ratio */
+  margin: 0 auto;
+  position: relative;
+  background-color: #fff; /* your app background */
+  display: flex;
+  flex-direction: column; /* adjust as needed */
+  align-items: center;
+  justify-content: flex-start; /* top-aligned content */
+}
+
+.screen {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.welcome-screen {
+  background-color: #007bc3;
+  padding-left: 82px;
+  padding-right: 82px;
+  justify-content: space-evenly;
+}
+
+.welcome-header {
+  color: #001f45;
+  text-transform: uppercase;
+  font-size: 85px;
+  font-weight: 700px;
+  text-align: center;
+}
+
+.welcome-text {
+  color: #ffffff;
+  font-size: 46px;
+  font-weight: 500;
+  text-align: center;
+  max-width: 763px;
+}
+
+.start-button {
+  background-color: #001f45;
+  font-size: 30px;
 }
 
 .main-button {
@@ -64,9 +123,26 @@ button {
   height: 95px;
 }
 
+.back-to-overview-button {
+  background-color: #001f45;
+  width: 252px;
+  border: none;
+}
+
+.learn-more-button {
+  background-color: #14d6e0;
+  color: #000000;
+  font-weight: 600;
+}
+
+.back-or-next-button {
+  background-color: #d752fd;
+  width: 419px;
+}
+
 .dot {
-  width: 24px;
-  height: 24px;
+  width: 28px;
+  height: 28px;
   border-radius: 50%;
   background-color: #ffffff66;
   transition: background-color 0.3s ease;
